--- a/index.html
+++ b/index.html
@@ -206,8 +206,7 @@ http://www.tooplate.com/view/2098-health
                                              <p>... </p>
                                         </div>
                                         <ul class="social-icon">
-                                             <li><a href="#" class="fa fa-snapchat"</a></li>
-                                             <li><a href="#" class="fa fa-envelope-o"></a></li>
+                                             <li><a href="#" class="fa fa-telegram"></a></li>
                                         </ul>
                                    </div>
                          </div>
