--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ http://www.tooplate.com/view/2098-health
                                         </div>
                                    </div>
                               </div>
+                              </div>
 
                               <div class="item item-third">
                                    <div class="caption">
